backlog: block cu-8 on DataBinding removal, add the cu-58 conversion task
The KAPT->KSP migration works but makes builds slower, so it is reverted and
blocked rather than shipped.

Room and Dagger both moved to KSP cleanly — schemas byte-identical, all three
Dagger components generated, verify loop green. But deleting kotlin-kapt breaks
the build: DataBinding's *BindingImpl/DataBinderMapperImpl/BR classes are
KAPT-only. So the migration runs both pipelines instead of replacing one.
Incremental builds went from ~2.0s to ~5.8s, roughly 3x slower on exactly the
case D10 wants faster. Not a misconfiguration: ksp.incremental=true and raising
-Xmx from 1236m to 3GB both changed nothing.

Two traps are recorded in the task so this is not rediscovered. The catalog's
ksp = "2.1.20-1.0.0" was never a real release, only unvalidated because the
plugin was never applied. And KSP1 1.0.32 appears dramatically faster while
actually failing with an internal compiler error — its timings were incremental
reuse of KSP2 output.

Adds cu-58 (DataBinding -> ViewBinding) as the unblocking task, per owner
decision to convert before the R3 redesigns and sequence cu-58 -> cu-8 -> cu-52.
Scope measured: 30 of 32 layouts, 218 binding expressions, 23 BindingAdapters,
zero two-way bindings. LiveData is deliberately excluded — the coupling is only
at the XML boundary, and bundling it would put ~30 layouts and 73 MutableLiveData
declarations in one change against 3.76% coverage.

Task: cu-8